# Movie-Watchlist

./: .flaskenv  CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml
movie_library/: __init__.py  forms.py  models.py  routes.py  tasks.py
movie_library/static/css/: forms.css  main.css  movie_details.css  movies.css
movie_library/templates/: index.html  layout.html  login.html  movie_details.html  movie_form.html  new_movie.html  register.html
movie_library/templates/email/: action.html
movie_library/templates/macros/: nav.html
